--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(as_R6)
 export(execute_request)
 export(gqlr_schema)
 export(parse_ast)
+export(server)
 import(graphql)
 import(jsonlite)
 import(pryr)
